Modify bootstrap and import img

--- a/home.html
+++ b/home.html
@@ -10,17 +10,13 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
+        <div class="header d-flex">
             <div class="logo">
-                <h1><a href=""></a></h1>
+                <h1><a href="./home.html"></a></h1>
             </div>
             <ul class="nav">
-                <li>
-                    <a href="#">首頁</a>
-                </li>
-                <li>
-                    <a href="#">定價</a>
-                </li>
+                <li><a href="#">首頁</a></li>
+                <li><a href="#">定價</a></li>
             </ul>
         </div>
         <div class="banner">
@@ -95,7 +91,7 @@
         </div>
     </div>
 
-    <div class="bg-white">
+    <!-- <div class="bg-white">
         <div class="container">
             <div class="tool">
                 <h1></h1>
@@ -252,6 +248,6 @@
             </ul>
             <button class="goTop"></button>
         </div>
-    </div>
+    </div> -->
 </body>
 </html>
