Modify reset css

--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="header d-flex">
+        <div class="header row">
             <div class="logo">
                 <h1><a href="./home.html"></a></h1>
             </div>
@@ -20,7 +20,13 @@
             </ul>
         </div>
         <div class="banner">
-            <p></p>
+            <p>
+                透過<br>
+                AI 工具王的<br>
+                強大模型<br>
+                讓您的業務<br>
+                更聰明<br>
+            </p>
             <a href=""></a>
             <div class="banner-animation"><span></span><span></span><span></span></div>
         </div>
