navbar ul toggle style

--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
                     所以改成d-md-flex，只在網頁版時才這樣固定在左側
                 -->
                 <div id="Navbarshow" class="collapse navbar-collapse d-md-flex justify-content-end">
-                    <ul class="nav text-center gap-x">
+                    <ul class="nav text-center gap-2">
                         <li class="nav-item">
                             <!-- 
                                 1. 要加nav-link才會滿版
