Fix header logo x-scrollbar

--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
             <nav class="navbar navbar-expand-md">
                 <div class="logo">
                     <!-- 若a連結內不加文字，整張圖會消失Q -->
-                    <h1><a href="./home.html">AI工具王</a></h1>
+                    <h1><a href="./home.html"><img src="../img/logo.png" alt="AI工具王"></a></h1>
                 </div>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#Navbarshow" >
                     <!-- 漢堡原來是黑的，要加上text-white -->
