--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="CSS/all.css">
 </head>
 <body>
+    <!-- TODO: 修正logo footer X軸問題 -->
     <div class="container">
         <div class="header border-bottom border-light py-3 mb-3">           
             <!-- 正常視窗下，原來的導覽列 -->
@@ -270,7 +271,7 @@
         <div class="footer d-flex justify-content-between fw-bold border-top pt-5 pb-3">
             <div class="d-flex justify-content-between flex-column flex-md-row">
                 <p>AI工具王 ©2023</p>
-                <ul class="social d-flex gap-3 ms-md-5">
+                <ul class="social d-flex flex-wrap gap-3 ms-md-5">
                     <li><a class="link-secondary" href="#">Facebook</a></li>
                     <li><a class="link-secondary" href="#">Twitter</a></li>
                     <li><a class="link-secondary" href="#">Instagram</a></li>
@@ -283,7 +284,6 @@
                 <!-- 箭頭變小fs-6，把span改sub讓他在副標題的位置 -->
                 <sub class="fs-6 ms-2 material-icons">arrow_upward</sub>
             </a>
-
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
