--- a/home.html
+++ b/home.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="CSS/all.css">
 </head>
 <body>
-    <!-- TODO: 修正logo footer X軸問題 -->
     <div class="container">
         <div class="header border-bottom border-light py-3 mb-3">           
             <!-- 正常視窗下，原來的導覽列 -->
@@ -43,14 +42,13 @@
             </nav>
         </div>
         <div class="banner">
-            <!-- <p>
-                透過<br>
-                AI 工具王的<br>
-                強大模型<br>
-                讓您的業務<br>
-                更聰明<br>
-            </p> -->
-            <a href=""></a>
+            <p class="display-2 fw-bolder mb-5"> 透過
+                AI 工具王的
+                強大模型
+                讓您的業務
+                更聰明
+            </p>
+            <a class="btn btn-outline-light fw-bold fs-5 px-5 py-4 rounded" href="#">開始使用</a>
             <div class="banner-animation"><span></span><span></span><span></span></div>
         </div>
         <div class="service">
