--- a/home.html
+++ b/home.html
@@ -48,8 +48,12 @@
                 讓您的業務
                 更聰明
             </p>
-            <a class="btn btn-outline-light fw-bold fs-5 px-5 py-4 rounded" href="#">開始使用</a>
-            <div class="banner-animation"><span></span><span></span><span></span></div>
+            <a class="btn btn-outline-light fw-bold fs-5 px-4 py-3 mb-5" href="#">開始使用</a>
+            <div class="d-flex banner-animation">
+                <img src="./img/deco.png" alt="animation">
+                <img src="./img/deco.png" alt="animation">
+                <img src="./img/deco.png" alt="animation">
+            </div>
         </div>
         <div class="service">
             <h3></h3>
