--- a/home.html
+++ b/home.html
@@ -42,54 +42,60 @@
             </nav>
         </div>
         <div class="banner">
-            <p class="display-2 fw-bolder mb-5"> 透過
+            <p class="display-2 fw-bolder"> 透過
                 AI 工具王的
                 強大模型
                 讓您的業務
                 更聰明
             </p>
-            <a class="btn btn-outline-light fw-bold fs-5 px-4 py-3 mb-5" href="#">開始使用</a>
-            <div class="d-flex banner-animation">
+            <a class="btn btn-outline-light fw-bold fs-5 px-4 py-3 my-5" href="#">開始使用</a>
+            <div class="banner-animation d-flex justify-content-end">
                 <img src="./img/deco.png" alt="animation">
                 <img src="./img/deco.png" alt="animation">
                 <img src="./img/deco.png" alt="animation">
             </div>
         </div>
         <div class="service">
-            <h3></h3>
-            <p></p>
+            <h3>我們的服務</h3>
+            <p>我們相信透過 AI 技術，包括圖像識別、自然語言處理和機器翻譯等，讓您更快、更準確地做出決策。</p>
             <ul class="service-list">
                 <li class="service">
-                    <img src="" alt="">
-                    <h4></h4>
-                    <p></p>
+                    <span class="material-icons">flash_on</span>
+                    <h4>快速</h4>
+                    <p>我們先進的推理基礎設施提供了極短的響應時間，讓你的產品服務不間斷。</p>
                 </li>
                 <li class="service">
-                    <img src="" alt="">
-                    <h4></h4>
-                    <p></p>
+                    <span class="material-icons">auto_awesome</span>
+                    <h4>靈活</h4>
+                    <p>我們的服務可以根據您的需求進行靈活調整，同時還可以滿足不同項目和預算的需求。</p>
                 </li>
                 <li class="service">
-                    <img src="" alt="">
-                    <h4></h4>
-                    <p></p>
+                    <span class="material-icons">library_add</span>
+                    <h4>擴充</h4>
+                    <p>我們的服務支持多種擴充選項，可以滿足您的不斷增長的 AI 需求。</p>
                 </li>
             </ul>
         </div>
-        <div class="cooperation">
-            <h3></h3>
-            <p></p>
-            <ul class="cooperation-list">
-                <li><img src="" alt=""></li>
-                <li><img src="" alt=""></li>
-                <li><img src="" alt=""></li>
-                <li><img src="" alt=""></li>
-                <li><img src="" alt=""></li>
-                <li><img src="" alt=""></li>
-                <li><img src="" alt=""></li>
-                <li><img src="" alt=""></li>
-                <li><img src="" alt=""></li>
-                <li><img src="" alt=""></li>
+        <div class="enterprise">
+            <h3>來自合作夥伴</h3>
+            <ul class="enterprise-list">
+                <li><img src="./img/enterprise.png" alt="enterprise"></li>
+                <li><img src="./img/enterprise1.png" alt="enterprise"></li>
+                <li><img src="./img/enterprise2.png" alt="enterprise"></li>
+                <li><img src="./img/enterprise3.png" alt="enterprise"></li>
+                <li><img src="./img/enterprise4.png" alt="enterprise"></li>
+                <li><img src="./img/enterprise5.png" alt="enterprise"></li>
+                <li><img src="./img/enterprise6.png" alt="enterprise"></li>
+                <li><img src="./img/enterprise7.png" alt="enterprise"></li>
+            </ul>
+            <ul class="enterprise-list px-3">
+                <li><img src="./img/enterprise8.png" alt="enterprise"></li>
+                <li><img src="./img/enterprise9.png" alt="enterprise"></li>
+                <li><img src="./img/enterprise11.png" alt="enterprise"></li>
+                <li><img src="./img/enterprise12.png" alt="enterprise"></li>
+                <li><img src="./img/enterprise1.png" alt="enterprise"></li>
+                <li><img src="./img/enterprise2.png" alt="enterprise"></li>
+                <li><img src="./img/enterprise3.png" alt="enterprise"></li>
             </ul>
         </div>
         <div class="recommend">
