--- a/home.html
+++ b/home.html
@@ -292,11 +292,13 @@
         </div>
         <div class="sitemap">
             <ul class="sitemap-list">
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a class="link-secondary" href="#">首頁</a></li>
+                <li><a class="link-secondary" href="#">定價</a></li>
             </ul>
-            <div class="sitemap-logo">
-                <h1><a href=""></a></h1>
+            <div class="logo">
+                <div class="logo">
+                    <h1><a href="./home.html"><img src="../img/logo.png" alt="AI工具王"></a></h1>
+                </div>
             </div>
         </div>
         <div class="footer d-flex justify-content-between fw-bold border-top pt-5 pb-3">
