Add black theme color to _variable

--- a/home.html
+++ b/home.html
@@ -149,11 +149,11 @@
         </div>
     </div>
     
-    <!-- <div class="bg-white">
+    <div class="bg-white">
         <div class="container">
             <div class="tool">
-                <h1></h1>
-                <input type="search" name="" id=""><img src="" alt="" class="search-icon"></input>
+                <h1 class="display-3 fw-bolder text-black">這些超酷的應用，都來自 AI工具王</h1>
+                <!-- <input type="search" name="" id=""><img src="" alt="" class="search-icon"></input>
                 <div class="filter-list">
                     <select name="" id="" class="filter"></select>
                     <ul class="filter-type">
@@ -166,7 +166,7 @@
                         <li><a href=""></a></li>
                     </ul>
                     <select name="" id="" class="orderBy"></select>
-                </div>
+                </div> -->
                 <ul class="tool-list">
                     <li class="tool-item">
                         <div class="img-container">
@@ -271,17 +271,17 @@
                         </div>
                     </li>
                 </ul>
-                <ul class="pagination">
+                <!-- <ul class="pagination">
                     <li class="page"><a href=""></a></li>
                     <li class="page"><a href=""></a></li>
                     <li class="page"><a href=""></a></li>
                     <li class="page"><a href=""></a></li>
                     <li class="page"><a href=""></a></li>
                     <li class="page"><a href=""></a></li>
-                </ul>
+                </ul> -->
             </div>
         </div>
-    </div> -->
+    </div>
 
     <div class="container">
         <div class="callToAction">
