--- a/home.html
+++ b/home.html
@@ -151,8 +151,8 @@
     
     <div class="bg-white">
         <div class="container">
-            <div class="tool">
-                <h1 class="display-3 fw-bolder text-black">這些超酷的應用，都來自 AI工具王</h1>
+            <div class="tool text-black">
+                <h1 class="display-3 fw-bolder text-center">這些超酷的應用，都來自 AI工具王</h1>
                 <!-- <input type="search" name="" id=""><img src="" alt="" class="search-icon"></input>
                 <div class="filter-list">
                     <select name="" id="" class="filter"></select>
@@ -167,110 +167,122 @@
                     </ul>
                     <select name="" id="" class="orderBy"></select>
                 </div> -->
-                <ul class="tool-list">
-                    <li class="tool-item">
-                        <div class="img-container">
-                            <img src="" alt="">
+                <ul class="tool-list d-flex flex-wrap justify-content-center gap-4">
+                    <li class="card overflow-hidden tool-item">
+                      <div class="img-container">
+                        <img class="zoom" src="./img/tool1.png" alt="Chatbot Builder">
+                      </div>
+                      <div class="card-body content-container">
+                        <div class="ai-desc">
+                          <h3 class="fw-900">Chatbot Builder</h3>
+                          <p class="caption lh-150">建立智能化的聊天機器人，解答常見問題、提供客戶支援、收集反饋等。</p>
                         </div>
-                        <div class="content-container">
-                            <h3></h3>
-                            <p></p>
-                            <div class="ai-info">
-                                <p></p>
-                                <span></span>
-                            </div>
-                            <div class="ai-hashtag">
-                                <p></p>
-                                <span></span>
-                            </div>
+                        <div class="ai-info">
+                          <span class="fw-700">AI 模型</span>
+                          <span>卡卡</span>
                         </div>
+                        <div class="ai-hashtag">
+                          <span>#聊天</span>
+                          <a href="#" class="material-icons">share</a>
+                        </div>
+                      </div>
                     </li>
-                    <li class="tool-item">
-                        <div class="img-container">
-                            <img src="" alt="">
+                    <li class="card overflow-hidden tool-item">
+                      <div class="img-container">
+                        <img class="zoom" src="./img/tool2.png" alt="Image Recognition Platform">
+                      </div>
+                      <div class="card-body content-container">
+                        <div class="ai-desc">
+                          <h3 class="fw-900">Image Recognition Platform</h3>
+                          <p class="caption lh-150">專業的圖像識別平台，識別圖像、分類、標記等。</p>
                         </div>
-                        <div class="content-container">
-                            <h3></h3>
-                            <p></p>
-                            <div class="ai-info">
-                                <p></p>
-                                <span></span>
-                            </div>
-                            <div class="ai-hashtag">
-                                <p></p>
-                                <span></span>
-                            </div>
+                        <div class="ai-info">
+                          <span class="fw-700">AI 模型</span>
+                          <span>杰杰</span>
                         </div>
+                        <div class="ai-hashtag">
+                          <span>#影像辨識</span>
+                          <a href="#" class="material-icons">share</a>
+                        </div>
+                      </div>
                     </li>
-                    <li class="tool-item">
-                        <div class="img-container">
-                            <img src="" alt="">
+                    <li class="card overflow-hidden tool-item">
+                      <div class="img-container">
+                        <img class="zoom" src="./img/tool3.png" alt="Language Translation API">
+                      </div>
+                      <div class="card-body content-container">
+                        <div class="ai-desc">
+                          <h3 class="fw-900">Language Translation API</h3>
+                          <p class="caption lh-150">專業的語言翻譯 API，實現文本翻譯功能，支援多種格式的文本。</p>
                         </div>
-                        <div class="content-container">
-                            <h3></h3>
-                            <p></p>
-                            <div class="ai-info">
-                                <p></p>
-                                <span></span>
-                            </div>
-                            <div class="ai-hashtag">
-                                <p></p>
-                                <span></span>
-                            </div>
+                        <div class="ai-info">
+                          <span class="fw-700">AI 模型</span>
+                          <span>琪琪</span>
                         </div>
+                        <div class="ai-hashtag">
+                          <span>#翻譯</span>
+                          <a href="#" class="material-icons">share</a>
+                        </div>
+                      </div>
                     </li>
-                    <li class="tool-item">
-                        <div class="img-container">
-                            <img src="" alt="">
+                    <li class="card overflow-hidden tool-item">
+                      <div class="img-container">
+                        <img class="zoom" src="./img/tool4.png" alt="Sentiment Analysis API">
+                      </div>
+                      <div class="card-body content-container">
+                        <div class="ai-desc">
+                          <h3 class="fw-900">Sentiment Analysis API</h3>
+                          <p class="caption lh-150">自動識別文本中的情感傾向，包括正向、負向和中性等。適用於情感分析、社交媒體監控、市場調查等。</p>
                         </div>
-                        <div class="content-container">
-                            <h3></h3>
-                            <p></p>
-                            <div class="ai-info">
-                                <p></p>
-                                <span></span>
-                            </div>
-                            <div class="ai-hashtag">
-                                <p></p>
-                                <span></span>
-                            </div>
+                        <div class="ai-info">
+                          <span class="fw-700">AI 模型</span>
+                          <span>昊昊</span>
                         </div>
+                        <div class="ai-hashtag">
+                          <span>#行銷</span>
+                          <a href="#" class="material-icons">share</a>
+                        </div>
+                      </div>
                     </li>
-                    <li class="tool-item">
-                        <div class="img-container">
-                            <img src="" alt="">
+                    <li class="card overflow-hidden tool-item">
+                      <div class="img-container">
+                        <img class="zoom" src="./img/tool5.png" alt="Fraud Detection Platform">
+                      </div>
+                      <div class="card-body content-container">
+                        <div class="ai-desc">
+                          <h3 class="fw-900">Fraud Detection Platform</h3>
+                          <p class="caption lh-150">預防詐騙活動，適用於銀行、金融、電商等。</p>
                         </div>
-                        <div class="content-container">
-                            <h3></h3>
-                            <p></p>
-                            <div class="ai-info">
-                                <p></p>
-                                <span></span>
-                            </div>
-                            <div class="ai-hashtag">
-                                <p></p>
-                                <span></span>
-                            </div>
+                        <div class="ai-info">
+                          <span class="fw-700">AI 模型</span>
+                          <span>卡卡</span>
                         </div>
+                        <div class="ai-hashtag">
+                          <span>#客服</span>
+                          <a href="#" class="material-icons">share</a>
+                        </div>
+                      </div>
                     </li>
-                    <li class="tool-item">
-                        <div class="img-container">
-                            <img src="" alt="">
+                    <li class="card overflow-hidden tool-item">
+                      <div class="img-container">
+                        <img class="zoom" src="./img/tool6.png" alt="Voice Assistant SDK">
+                      </div>
+                      <div class="card-body content-container">
+                        <div class="ai-desc">
+                          <h3 class="fw-900">Voice Assistant SDK</h3>
+                          <p class="caption lh-150">通過語音控制應用程式、設備，實現多種功能，例如播放音樂、查詢天氣、發送信息等。</p>
                         </div>
-                        <div class="content-container">
-                            <h3></h3>
-                            <p></p>
-                            <div class="ai-info">
-                                <p></p>
-                                <span></span>
-                            </div>
-                            <div class="ai-hashtag">
-                                <p></p>
-                                <span></span>
-                            </div>
+                        <div class="ai-info">
+                          <span class="fw-700">AI 模型</span>
+                          <span>杰杰</span>
                         </div>
+                        <div class="ai-hashtag">
+                          <span>#生產力</span>
+                          <a href="#" class="material-icons">share</a>
+                        </div>
+                      </div>
                     </li>
-                </ul>
+                  </ul>
                 <!-- <ul class="pagination">
                     <li class="page"><a href=""></a></li>
                     <li class="page"><a href=""></a></li>
