Change bolder attr to 900

--- a/home.html
+++ b/home.html
@@ -174,7 +174,7 @@
                       </div>
                       <div class="card-body content-container">
                         <div class="ai-desc">
-                          <h3 class="fw-900">Chatbot Builder</h3>
+                          <h3 class="fw-bolder fs-5">Chatbot Builder</h3>
                           <p class="caption lh-150">建立智能化的聊天機器人，解答常見問題、提供客戶支援、收集反饋等。</p>
                         </div>
                         <div class="ai-info">
@@ -193,7 +193,7 @@
                       </div>
                       <div class="card-body content-container">
                         <div class="ai-desc">
-                          <h3 class="fw-900">Image Recognition Platform</h3>
+                          <h3 class="fw-bolder">Image Recognition Platform</h3>
                           <p class="caption lh-150">專業的圖像識別平台，識別圖像、分類、標記等。</p>
                         </div>
                         <div class="ai-info">
@@ -212,7 +212,7 @@
                       </div>
                       <div class="card-body content-container">
                         <div class="ai-desc">
-                          <h3 class="fw-900">Language Translation API</h3>
+                          <h3 class="fw-bolder">Language Translation API</h3>
                           <p class="caption lh-150">專業的語言翻譯 API，實現文本翻譯功能，支援多種格式的文本。</p>
                         </div>
                         <div class="ai-info">
@@ -231,7 +231,7 @@
                       </div>
                       <div class="card-body content-container">
                         <div class="ai-desc">
-                          <h3 class="fw-900">Sentiment Analysis API</h3>
+                          <h3 class="fw-bolder">Sentiment Analysis API</h3>
                           <p class="caption lh-150">自動識別文本中的情感傾向，包括正向、負向和中性等。適用於情感分析、社交媒體監控、市場調查等。</p>
                         </div>
                         <div class="ai-info">
@@ -250,7 +250,7 @@
                       </div>
                       <div class="card-body content-container">
                         <div class="ai-desc">
-                          <h3 class="fw-900">Fraud Detection Platform</h3>
+                          <h3 class="fw-bolder">Fraud Detection Platform</h3>
                           <p class="caption lh-150">預防詐騙活動，適用於銀行、金融、電商等。</p>
                         </div>
                         <div class="ai-info">
@@ -269,7 +269,7 @@
                       </div>
                       <div class="card-body content-container">
                         <div class="ai-desc">
-                          <h3 class="fw-900">Voice Assistant SDK</h3>
+                          <h3 class="fw-bolder">Voice Assistant SDK</h3>
                           <p class="caption lh-150">通過語音控制應用程式、設備，實現多種功能，例如播放音樂、查詢天氣、發送信息等。</p>
                         </div>
                         <div class="ai-info">
