Modify bg-white border radius and padding

--- a/home.html
+++ b/home.html
@@ -149,7 +149,7 @@
         </div>
     </div>
     
-    <div class="bg-white">
+    <div class="bg-white border-radius-160 py-6 py-lg-7">
         <div class="container">
             <div class="tool text-black">
                 <h1 class="display-3 fw-bolder text-center">這些超酷的應用，都來自 AI工具王</h1>
@@ -193,7 +193,7 @@
                       </div>
                       <div class="card-body content-container">
                         <div class="ai-desc">
-                          <h3 class="fw-bolder">Image Recognition Platform</h3>
+                          <h3 class="fw-bolder fs-5">Image Recognition Platform</h3>
                           <p class="caption lh-150">專業的圖像識別平台，識別圖像、分類、標記等。</p>
                         </div>
                         <div class="ai-info">
@@ -212,7 +212,7 @@
                       </div>
                       <div class="card-body content-container">
                         <div class="ai-desc">
-                          <h3 class="fw-bolder">Language Translation API</h3>
+                          <h3 class="fw-bolder fs-5">Language Translation API</h3>
                           <p class="caption lh-150">專業的語言翻譯 API，實現文本翻譯功能，支援多種格式的文本。</p>
                         </div>
                         <div class="ai-info">
@@ -231,7 +231,7 @@
                       </div>
                       <div class="card-body content-container">
                         <div class="ai-desc">
-                          <h3 class="fw-bolder">Sentiment Analysis API</h3>
+                          <h3 class="fw-bolder fs-5">Sentiment Analysis API</h3>
                           <p class="caption lh-150">自動識別文本中的情感傾向，包括正向、負向和中性等。適用於情感分析、社交媒體監控、市場調查等。</p>
                         </div>
                         <div class="ai-info">
@@ -250,7 +250,7 @@
                       </div>
                       <div class="card-body content-container">
                         <div class="ai-desc">
-                          <h3 class="fw-bolder">Fraud Detection Platform</h3>
+                          <h3 class="fw-bolder fs-5">Fraud Detection Platform</h3>
                           <p class="caption lh-150">預防詐騙活動，適用於銀行、金融、電商等。</p>
                         </div>
                         <div class="ai-info">
@@ -269,7 +269,7 @@
                       </div>
                       <div class="card-body content-container">
                         <div class="ai-desc">
-                          <h3 class="fw-bolder">Voice Assistant SDK</h3>
+                          <h3 class="fw-bolder fs-5">Voice Assistant SDK</h3>
                           <p class="caption lh-150">通過語音控制應用程式、設備，實現多種功能，例如播放音樂、查詢天氣、發送信息等。</p>
                         </div>
                         <div class="ai-info">
@@ -282,7 +282,7 @@
                         </div>
                       </div>
                     </li>
-                  </ul>
+                </ul>
                 <!-- <ul class="pagination">
                     <li class="page"><a href=""></a></li>
                     <li class="page"><a href=""></a></li>
