--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="service">
-            <h3>我們的服務</h3>
+            <h3 class="fs-2 fw-bold">我們的服務</h3>
             <p>我們相信透過 AI 技術，包括圖像識別、自然語言處理和機器翻譯等，讓您更快、更準確地做出決策。</p>
             <ul class="service-list">
                 <li class="service">
@@ -77,7 +77,7 @@
             </ul>
         </div>
         <div class="enterprise">
-            <h3>來自合作夥伴</h3>
+            <h3 class="fs-2 fw-bold">來自合作夥伴</h3>
             <ul class="enterprise-list">
                 <li><img src="./img/enterprise.png" alt="enterprise"></li>
                 <li><img src="./img/enterprise1.png" alt="enterprise"></li>
@@ -297,7 +297,7 @@
 
     <div class="container">
         <div class="callToAction">
-            <h2>現在就來建立屬於你的服務吧</h2>
+            <h2 class="display-5 fw-bold">現在就來建立屬於你的服務吧</h2>
             <a class="btn btn-outline-light fw-bold fs-5 px-4 py-3" href="#">開始使用
                 <span class="material-icons align-middle">arrow_outward</span>
             </a>
