--- a/home.html
+++ b/home.html
@@ -296,13 +296,13 @@
     </div>
 
     <div class="container">
-        <div class="callToAction">
-            <h2 class="display-5 fw-bold">現在就來建立屬於你的服務吧</h2>
+        <div class="callToAction d-flex flex-column align-items-center my-8">
+            <h2 class="display-5 fw-bold mb-6 text-center">現在就來建立屬於你的服務吧</h2>
             <a class="btn btn-outline-light fw-bold fs-5 px-4 py-3" href="#">開始使用
                 <span class="material-icons align-middle">arrow_outward</span>
             </a>
         </div>
-        <div class="sitemap">
+        <div class="sitemap border-top border-bottom">
             <ul class="sitemap-list">
                 <li><a class="link-secondary" href="#">首頁</a></li>
                 <li><a class="link-secondary" href="#">定價</a></li>
@@ -313,7 +313,7 @@
                 </div>
             </div>
         </div>
-        <div class="footer d-flex justify-content-between fw-bold border-top pt-5 pb-3">
+        <div class="footer d-flex justify-content-between fw-bold pt-5 pb-3">
             <div class="d-flex justify-content-between flex-column flex-md-row">
                 <p>AI工具王 ©2023</p>
                 <ul class="social d-flex flex-wrap gap-3 ms-md-5">
