[Bootstrap] : set $pagination-border-radius to null

--- a/home.html
+++ b/home.html
@@ -167,12 +167,12 @@
                     </ul>
                     <select name="" id="" class="orderBy"></select>
                 </div> -->
-                <ul class="tool-list d-flex flex-wrap justify-content-center gap-3">
+                <ul class="tool-list d-flex flex-wrap justify-content-center my-6 gap-3">
                     <li class="card overflow-hidden tool-item">
                       <div class="img-container">
                         <img class="zoom" src="./img/tool1.png" alt="Chatbot Builder">
                       </div>
-                      <div class="card-body content-container">
+                      <div class="content-container">
                         <div class="ai-desc">
                           <h3 class="fw-bolder fs-5">Chatbot Builder</h3>
                           <p class="caption lh-150">建立智能化的聊天機器人，解答常見問題、提供客戶支援、收集反饋等。</p>
@@ -191,7 +191,7 @@
                       <div class="img-container">
                         <img class="zoom" src="./img/tool2.png" alt="Image Recognition Platform">
                       </div>
-                      <div class="card-body content-container">
+                      <div class="content-container">
                         <div class="ai-desc">
                           <h3 class="fw-bolder fs-5">Image Recognition Platform</h3>
                           <p class="caption lh-150">專業的圖像識別平台，識別圖像、分類、標記等。</p>
@@ -210,7 +210,7 @@
                       <div class="img-container">
                         <img class="zoom" src="./img/tool3.png" alt="Language Translation API">
                       </div>
-                      <div class="card-body content-container">
+                      <div class="content-container">
                         <div class="ai-desc">
                           <h3 class="fw-bolder fs-5">Language Translation API</h3>
                           <p class="caption lh-150">專業的語言翻譯 API，實現文本翻譯功能，支援多種格式的文本。</p>
@@ -229,7 +229,7 @@
                       <div class="img-container">
                         <img class="zoom" src="./img/tool4.png" alt="Sentiment Analysis API">
                       </div>
-                      <div class="card-body content-container">
+                      <div class="content-container">
                         <div class="ai-desc">
                           <h3 class="fw-bolder fs-5">Sentiment Analysis API</h3>
                           <p class="caption lh-150">自動識別文本中的情感傾向，包括正向、負向和中性等。適用於情感分析、社交媒體監控、市場調查等。</p>
@@ -248,7 +248,7 @@
                       <div class="img-container">
                         <img class="zoom" src="./img/tool5.png" alt="Fraud Detection Platform">
                       </div>
-                      <div class="card-body content-container">
+                      <div class="content-container">
                         <div class="ai-desc">
                           <h3 class="fw-bolder fs-5">Fraud Detection Platform</h3>
                           <p class="caption lh-150">預防詐騙活動，適用於銀行、金融、電商等。</p>
@@ -267,7 +267,7 @@
                       <div class="img-container">
                         <img class="zoom" src="./img/tool6.png" alt="Voice Assistant SDK">
                       </div>
-                      <div class="card-body content-container">
+                      <div class="content-container">
                         <div class="ai-desc">
                           <h3 class="fw-bolder fs-5">Voice Assistant SDK</h3>
                           <p class="caption lh-150">通過語音控制應用程式、設備，實現多種功能，例如播放音樂、查詢天氣、發送信息等。</p>
@@ -283,14 +283,16 @@
                       </div>
                     </li>
                 </ul>
-                <!-- <ul class="pagination">
-                    <li class="page"><a href=""></a></li>
-                    <li class="page"><a href=""></a></li>
-                    <li class="page"><a href=""></a></li>
-                    <li class="page"><a href=""></a></li>
-                    <li class="page"><a href=""></a></li>
-                    <li class="page"><a href=""></a></li>
-                </ul> -->
+                <ul class="pagination d-flex justify-content-end align-items-center gap-1">
+                    <li class="page-item active" aria-current="page"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item"><a class="page-link" href="#">4</a></li>
+                    <li class="page-item"><a class="page-link" href="#">5</a></li>
+                    <li class="page-item">
+                      <a class="page-link" href="#"><span class="material-icons">keyboard_arrow_right</span></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
