--- a/home.html
+++ b/home.html
@@ -285,12 +285,12 @@
                 </ul>
                 <ul class="pagination d-flex justify-content-end align-items-center gap-1">
                     <li class="page-item active" aria-current="page"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item"><a class="page-link" href="#">4</a></li>
-                    <li class="page-item"><a class="page-link" href="#">5</a></li>
+                    <li class="page-item"><a class="page-link text-primary" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link text-primary" href="#">3</a></li>
+                    <li class="page-item"><a class="page-link text-primary" href="#">4</a></li>
+                    <li class="page-item"><a class="page-link text-primary" href="#">5</a></li>
                     <li class="page-item">
-                      <a class="page-link" href="#"><span class="material-icons">keyboard_arrow_right</span></a>
+                      <a class="page-link" href="#"><span class="material-icons text-primary">keyboard_arrow_right</span></a>
                     </li>
                 </ul>
             </div>
