--- a/home.html
+++ b/home.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI工具王</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
     <link rel="stylesheet" href="CSS/all.css">
 </head>
 <body>
@@ -99,48 +100,48 @@
             </ul>
         </div>
         <div class="recommend">
-            <ul class="recommend-list">
-                <li>
-                    <div class="star">
+            <ul class="recommend-list d-flex gap-4">
+                <li class="card">
+                    <div class="star d-flex gap-1">
                         <img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star">
                     </div>
-                    <p>
+                    <p class="comment">
                         非常喜歡 AI工具王 提供的 AI 模型租賃服務，使用起來非常方便，而且效果非常好。對於我們公司的業務來說，這個服務非常重要，因為我們需要大量的數據進行分析和預測，AI工具王 提供的 AI 模型能夠幫助我們節省大量時間和成本，實在是太棒了！
                     </p>
-                    <div class="recommender">
+                    <div class="recommender d-flex gap-3 align-items-center">
                         <img src="./img/avatar1.png" alt="avatar">
                         <div>
-                            <p>陳小姐</p>
+                            <p class="mb-1">陳小姐</p>
                             <p>ABC科技有限公司</p>
                         </div>
                     </div>
                 </li>
-                <li>
-                    <div class="star">
+                <li class="card">
+                    <div class="star d-flex gap-1">
                         <img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star">
                     </div>
-                    <p>
+                    <p class="comment">
                         作為一家醫療器材公司，我們非常關注人工智能技術的應用，而 AI工具王 提供的 AI 模型租賃服務為我們帶來了很大的幫助。我們使用 AI工具王 的模型進行醫學影像分析和預測，這些模型非常精確，能夠幫助我們更好地診斷病情，提高治療效果。感謝 AI工具王 團隊的辛勤工作！
                     </p>
-                    <div class="recommender">
+                    <div class="recommender d-flex gap-3 align-items-center">
                         <img src="./img/avatar2.png" alt="avatar">
                         <div>
-                            <p>劉小姐</p>
+                            <p class="mb-1">劉小姐</p>
                             <p>XYZ 醫療器材有限公司</p>
                         </div>
                     </div>
                 </li>
-                <li>
-                    <div class="star">
+                <li class="card">
+                    <div class="star d-flex gap-1">
                         <img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star">
                     </div>
-                    <p>
+                    <p class="comment">
                         我們銀行一直在尋找能夠幫助我們提高風險控制和客戶服務的解決方案，而 AI工具王 提供的 AI 模型租賃服務正好滿足了我們的需求。我們使用 AI工具王 的模型進行客戶信用評估和詐騙檢測等任務，這些模型非常準確，能夠幫助我們更好地控制風險，提高客戶滿意度。非常感謝 AI工具王 團隊的支持！
                     </p>
-                    <div class="recommender">
+                    <div class="recommender d-flex gap-3 align-items-center">
                         <img src="./img/avatar3.png" alt="avatar">
                         <div>
-                            <p>黃先生</p>
+                            <p class="mb-1">黃先生</p>
                             <p>EFG 銀行</p>
                         </div>
                     </div>
@@ -334,6 +335,7 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="all.js"></script>
 </body>
 </html>
