--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
                 </div>
             </nav>
         </div>
-        <div class="banner">
+        <div class="banner mt-8">
             <p class="display-2 fw-bolder"> 透過
                 AI 工具王的
                 強大模型
@@ -56,7 +56,7 @@
                 <img src="./img/deco.png" alt="animation">
             </div>
         </div>
-        <div class="service">
+        <div class="service mt-8">
             <h3 class="fs-2 fw-bold">我們的服務</h3>
             <p>我們相信透過 AI 技術，包括圖像識別、自然語言處理和機器翻譯等，讓您更快、更準確地做出決策。</p>
             <ul class="service-list">
@@ -77,7 +77,7 @@
                 </li>
             </ul>
         </div>
-        <div class="enterprise">
+        <div class="enterprise mt-8">
             <h3 class="fs-2 fw-bold">來自合作夥伴</h3>
             <ul class="enterprise-list">
                 <li><img src="./img/enterprise.png" alt="enterprise"></li>
@@ -99,54 +99,54 @@
                 <li><img src="./img/enterprise3.png" alt="enterprise"></li>
             </ul>
         </div>
-        <div class="recommend swiper">
-            <ul class="recommend-list d-flex gap-4 swiper-wrapper">
-                <li class="card swiper-slide swiper-slide">
-                    <div class="star d-flex gap-1">
+        <div class="swiper recommend mt-8 lh-base">
+            <div class="swiper-wrapper d-flex">
+                <div class="swiper-slide card">
+                    <div class="star d-flex flex-wrap gap-1">
                         <img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star">
                     </div>
                     <p class="comment">
                         非常喜歡 AI工具王 提供的 AI 模型租賃服務，使用起來非常方便，而且效果非常好。對於我們公司的業務來說，這個服務非常重要，因為我們需要大量的數據進行分析和預測，AI工具王 提供的 AI 模型能夠幫助我們節省大量時間和成本，實在是太棒了！
                     </p>
-                    <div class="recommender d-flex gap-3 align-items-center">
+                    <div class="recommender d-flex flex-wrap gap-3 align-items-center">
                         <img src="./img/avatar1.png" alt="avatar">
                         <div>
                             <p class="mb-1">陳小姐</p>
                             <p>ABC科技有限公司</p>
                         </div>
                     </div>
-                </li>
-                <li class="card swiper-slide">
-                    <div class="star d-flex gap-1">
+                </div>
+                <div class="swiper-slide card">
+                    <div class="star d-flex flex-wrap gap-1">
                         <img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star">
                     </div>
                     <p class="comment">
                         作為一家醫療器材公司，我們非常關注人工智能技術的應用，而 AI工具王 提供的 AI 模型租賃服務為我們帶來了很大的幫助。我們使用 AI工具王 的模型進行醫學影像分析和預測，這些模型非常精確，能夠幫助我們更好地診斷病情，提高治療效果。感謝 AI工具王 團隊的辛勤工作！
                     </p>
-                    <div class="recommender d-flex gap-3 align-items-center">
+                    <div class="recommender d-flex flex-wrap gap-3 align-items-center">
                         <img src="./img/avatar2.png" alt="avatar">
                         <div>
                             <p class="mb-1">劉小姐</p>
                             <p>XYZ 醫療器材有限公司</p>
                         </div>
                     </div>
-                </li>
-                <li class="card swiper-slide">
-                    <div class="star d-flex gap-1">
+                </div>
+                <div class="swiper-slide card">
+                    <div class="star d-flex flex-wrap gap-1">
                         <img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star"><img src="./img/icons/star.png" alt="star">
                     </div>
                     <p class="comment">
                         我們銀行一直在尋找能夠幫助我們提高風險控制和客戶服務的解決方案，而 AI工具王 提供的 AI 模型租賃服務正好滿足了我們的需求。我們使用 AI工具王 的模型進行客戶信用評估和詐騙檢測等任務，這些模型非常準確，能夠幫助我們更好地控制風險，提高客戶滿意度。非常感謝 AI工具王 團隊的支持！
                     </p>
-                    <div class="recommender d-flex gap-3 align-items-center">
+                    <div class="recommender d-flex flex-wrap gap-3 align-items-center">
                         <img src="./img/avatar3.png" alt="avatar">
                         <div>
                             <p class="mb-1">黃先生</p>
                             <p>EFG 銀行</p>
                         </div>
                     </div>
-                </li>
-            </ul>
+                </div>
+            </div>
             <div class="swiper-pagination"></div>
         </div>
     </div>
@@ -169,7 +169,7 @@
                     </ul>
                     <select name="" id="" class="orderBy"></select>
                 </div> -->
-                <ul class="tool-list d-flex flex-wrap justify-content-center my-6 gap-3">
+                <ul class="tool-list d-flex flex-wrap justify-content-center my-6 gap-3 lh-base">
                     <li class="card overflow-hidden tool-item">
                       <div class="img-container">
                         <img class="zoom" src="./img/tool1.png" alt="Chatbot Builder">
@@ -335,62 +335,6 @@
             </a>
         </div>
     </div>
-
-    <div class="container">
-      <div class="swiper">
-        <!-- Additional required wrapper -->
-        <div class="swiper-wrapper">
-          <!-- Slides -->
-          <div class="swiper-slide">
-            <!-- 這邊是放要輪播的內容 -->
-            <div class="card text-black">
-              <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023web-camp/tool1.png?raw=true" alt="">
-              <h3>1</h3>
-              <p>content 1</p>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="card text-black text-black">
-              <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023web-camp/tool1.png?raw=true" alt="">
-              <h3>2</h3>
-              <p>content 2</p>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="card text-black">
-              <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023web-camp/tool1.png?raw=true" alt="">
-              <h3>3</h3>
-              <p>content 3</p>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="card text-black">
-              <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023web-camp/tool1.png?raw=true" alt="">
-              <h3>4</h3>
-              <p>content 4</p>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="card text-black">
-              <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023web-camp/tool1.png?raw=true" alt="">
-              <h3>5</h3>
-              <p>content 5</p>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="card text-black">
-              <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023web-camp/tool1.png?raw=true" alt="">
-              <h3>6</h3>
-              <p>content 6</p>
-            </div>
-          </div>
-        </div>
-        
-       <!-- If we need pagination -->
-       <div class="swiper-pagination"></div>
-      </div>  
-    </div>
-    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="all.js"></script>
