Finsih service-list

--- a/home.html
+++ b/home.html
@@ -42,8 +42,8 @@
                 </div>
             </nav>
         </div>
-        <div class="banner mt-8">
-            <p class="display-2 fw-bolder"> 透過
+        <div class="banner">
+            <p class="display-2 fw-bolder whitespace-pre-line"> 透過
                 AI 工具王的
                 強大模型
                 讓您的業務
@@ -57,28 +57,32 @@
             </div>
         </div>
         <div class="service mt-8">
-            <h3 class="fs-2 fw-bold">我們的服務</h3>
-            <p>我們相信透過 AI 技術，包括圖像識別、自然語言處理和機器翻譯等，讓您更快、更準確地做出決策。</p>
-            <ul class="service-list">
-                <li class="service">
+            <div class="row">
+              <h3 class="fs-2 fw-bold col-12 col-md-4 mb-4">我們的服務</h3>
+              <p class="display-5 fw-bold whitespace-pre-line col-12 col-md-8 mb-7">我們相信透過 AI 技術，
+                包括圖像識別、自然語言處理和機器翻譯等，讓您更快、更準確地做出決策。
+              </p>
+            </div>
+            <ul class="service-list d-flex flex-wrap justify-content-center gap-4">
+                <li class="card service-item">
                     <span class="material-icons">flash_on</span>
-                    <h4>快速</h4>
-                    <p>我們先進的推理基礎設施提供了極短的響應時間，讓你的產品服務不間斷。</p>
+                    <h4 class="fw-bolder fs-2">快速</h4>
+                    <p class="lh-sm">我們先進的推理基礎設施提供了極短的響應時間，讓你的產品服務不間斷。</p>
                 </li>
-                <li class="service">
+                <li class="card service-item">
                     <span class="material-icons">auto_awesome</span>
-                    <h4>靈活</h4>
-                    <p>我們的服務可以根據您的需求進行靈活調整，同時還可以滿足不同項目和預算的需求。</p>
+                    <h4 class="fw-bolder fs-2">靈活</h4>
+                    <p class="lh-sm">我們的服務可以根據您的需求進行靈活調整，同時還可以滿足不同項目和預算的需求。</p>
                 </li>
-                <li class="service">
+                <li class="card service-item">
                     <span class="material-icons">library_add</span>
-                    <h4>擴充</h4>
-                    <p>我們的服務支持多種擴充選項，可以滿足您的不斷增長的 AI 需求。</p>
+                    <h4 class="fw-bolder fs-2">擴充</h4>
+                    <p class="lh-sm">我們的服務支持多種擴充選項，可以滿足您的不斷增長的 AI 需求。</p>
                 </li>
-            </ul>
+              </ul>
         </div>
         <div class="enterprise mt-8">
-            <h3 class="fs-2 fw-bold">來自合作夥伴</h3>
+            <h3 class="fs-2 fw-bold mb-4 mb-md-7">來自合作夥伴</h3>
             <ul class="enterprise-list">
                 <li><img src="./img/enterprise.png" alt="enterprise"></li>
                 <li><img src="./img/enterprise1.png" alt="enterprise"></li>
@@ -99,7 +103,7 @@
                 <li><img src="./img/enterprise3.png" alt="enterprise"></li>
             </ul>
         </div>
-        <div class="swiper recommend mt-8 lh-base">
+        <div class="swiper recommend my-8 lh-base">
             <div class="swiper-wrapper d-flex">
                 <div class="swiper-slide card">
                     <div class="star d-flex flex-wrap gap-1">
