--- a/home.html
+++ b/home.html
@@ -310,10 +310,10 @@
                 <span class="material-icons align-middle">arrow_outward</span>
             </a>
         </div>
-        <div class="sitemap border-top border-bottom">
+        <div class="sitemap border-top border-bottom d-flex justify-content-between flex-wrap">
             <ul class="sitemap-list">
-                <li><a class="link-secondary" href="#">首頁</a></li>
-                <li><a class="link-secondary" href="#">定價</a></li>
+                <li><a class="link-secondary display-5 display-md-1 fw-bolder mb-2" href="#">首頁</a></li>
+                <li><a class="link-secondary display-5 display-md-1 fw-bolder" href="#">定價</a></li>
             </ul>
             <div class="logo">
                 <div class="logo">
@@ -344,3 +344,7 @@
     <script src="all.js"></script>
 </body>
 </html>
+
+<!-- TODO
+1. 分頁換行
+-->
