--- a/home.html
+++ b/home.html
@@ -310,7 +310,7 @@
                 <span class="material-icons align-middle">arrow_outward</span>
             </a>
         </div>
-        <div class="sitemap border-top border-bottom d-flex justify-content-between flex-wrap">
+        <div class="sitemap border-top border-bottom py-7 d-flex justify-content-between flex-wrap">
             <ul class="sitemap-list">
                 <li><a class="link-secondary display-5 display-md-1 fw-bolder mb-2" href="#">首頁</a></li>
                 <li><a class="link-secondary display-5 display-md-1 fw-bolder" href="#">定價</a></li>
@@ -347,4 +347,5 @@
 
 <!-- TODO
 1. 分頁換行
+2. 合作夥伴偽元素寬度
 -->
