--- a/pricing.html
+++ b/pricing.html
@@ -59,52 +59,52 @@
         <div class="price mt-8">
             <h3 class="fs-2 fw-bold mb-4">定價</h3>
             <ul class="price-list d-flex flex-wrap gap-3">
-                <li class="card price-item d-flex">
-                    <div class="card-body">
+                <li class="card price-item">
+                    <div class="card-body pb-7">
                         <h4 class="fs-2 fw-bolder mb-3">琪琪</h4>
-                        <ul class="flex-grow-1">
+                        <ul>
                             <li class="mark-disc">初級</li>
                             <li class="mark-disc">速度最快</li>
                         </ul>
                     </div>
-                    <div class="card-body d-flex justify-content-between border-top border-secondary">
-                        <p class="fw-bold">NT$5<span class="text-muted">／1k tokens</span></p>
-                        <p>開始使用<span class="material-icons align-middle ms-2">call_made</span></p>
-                    </div>
-                </li>
-                <li class="card price-item d-flex">
-                    <div class="card-body">
-                        <h4 class="fs-2 fw-bolder mb-3">昊昊</h4>
-                        <ul class="flex-grow-1">
-                            <li class="mark-disc">中級</li>
-                        </ul>
-                    </div>
-                    <div class="card-body d-flex justify-content-between border-top border-secondary">
+                    <div class="card-footer d-flex justify-content-between border-top border-secondary">
                         <p class="fw-bold">NT$5<span class="text-muted">／1k tokens</span></p>
                         <p>開始使用<span class="material-icons align-middle ms-2">call_made</span></p>
                     </div>
                 </li>
                 <li class="card price-item">
-                    <div class="card-body">
+                    <div class="card-body pb-7">
+                        <h4 class="fs-2 fw-bolder mb-3">昊昊</h4>
+                        <ul>
+                            <li class="mark-disc">中級</li>
+                        </ul>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between border-top border-secondary">
+                        <p class="fw-bold">NT$5<span class="text-muted">／1k tokens</span></p>
+                        <p>開始使用<span class="material-icons align-middle ms-2">call_made</span></p>
+                    </div>
+                </li>
+                <li class="card price-item">
+                    <div class="card-body pb-7">
                         <h4 class="fs-2 fw-bolder mb-3">卡卡</h4>
                         <ul>
                             <li class="mark-disc">高級</li>
                         </ul>
                     </div>
-                    <div class="card-body d-flex justify-content-between border-top border-secondary">
+                    <div class="card-footer d-flex justify-content-between border-top border-secondary">
                         <p class="fw-bold">NT$5<span class="text-muted">／1k tokens</span></p>
                         <p>開始使用<span class="material-icons align-middle ms-2">call_made</span></p>
                     </div>
                 </li>
                 <li class="card price-item">
-                    <div class="card-body">
+                    <div class="card-body pb-7">
                         <h4 class="fs-2 fw-bolder mb-3">杰杰</h4>
                         <ul>
                             <li class="mark-disc">最高級</li>
                             <li class="mark-disc">資料最完善</li>
                         </ul>
                     </div>
-                    <div class="card-body d-flex justify-content-between border-top border-secondary">
+                    <div class="card-footer d-flex justify-content-between border-top border-secondary">
                         <p class="fw-bold">NT$5<span class="text-muted">／1k tokens</span></p>
                         <p>開始使用<span class="material-icons align-middle ms-2">call_made</span></p>
                     </div>
