[ Boostrap ] Turn "font-size" responsive  true

--- a/pricing.html
+++ b/pricing.html
@@ -43,18 +43,21 @@
             </nav>
         </div>
         <div class="banner">
-            <p class="display-2 fw-bolder whitespace-pre-line"> 透過
-                AI 工具王的
-                強大模型
-                讓您的業務
-                更聰明
-            </p>
-            <a class="btn btn-outline-light fw-bold fs-5 px-4 py-3 my-5" href="#">開始使用</a>
-            <div class="banner-animation d-flex justify-content-end">
-                <img src="./img/deco.png" alt="animation">
-                <img src="./img/deco.png" alt="animation">
-                <img src="./img/deco.png" alt="animation">
+            <div class="row">
+                <p class="fs-48 fs-md-120 fw-bolder align-self-start whitespace-pre-line"> 用多少，
+                    付多少。
+                </p>
             </div>
+            <div class="row justify-content-end mt-6 mt-md-7">
+                <p class="col-9 col-md-5 display-6 fw-bold">
+                    我們相信，最靈活的取用機制，才能最大化的幫助你業務的推動。
+                </p>
+            </div>
+        </div>
+        <div class="banner-animation d-flex justify-content-end mt-8">
+            <img src="./img/deco.png" alt="animation">
+            <img src="./img/deco.png" alt="animation">
+            <img src="./img/deco.png" alt="animation">
         </div>
         <div class="price mt-8">
             <h3 class="fs-2 fw-bold mb-4">定價</h3>
@@ -110,10 +113,19 @@
                     </div>
                 </li>
             </ul>
-        <div class="spec mt-8">
+        </div>
+        <div class="spec my-8">
             <div class="row">
-                <h3 class="fs-2 fw-bold col-12 col-md-4 mb-4">使用規範</h3>
-
+                <div class="col-md-4">
+                    <h3 class="fs-2 fw-bold mb-4">使用規範</h3>
+                </div>
+                <div class="col-md-8">
+                    <h4 class="display-5 fw-bold">守法</h4>
+                    <p class="fs-2 py-4 border-bottom border-secondary">請遵守相關的法規和政策，不得進行任何違法違規的活動。</p>
+                    <h4 class="mt-4 display-5 fw-bold">資訊安全</h4>
+                    <p class="fs-2 py-4 border-bottom border-secondary">請務必保護好自己的帳號和密碼，不得將其透露給他人。</p>
+                    <h4 class="mt-4 display-5 fw-bold">守密</h4>
+                    <p class="fs-2 py-4 border-bottom border-secondary">需對使用過程中產生的數據負責，不得擅自泄露數據。</p>
                 </div>
             </div>
         </div>
