[ Boostrap ] Add custimized font-size

--- a/pricing.html
+++ b/pricing.html
@@ -49,7 +49,7 @@
                 </p>
             </div>
             <div class="row justify-content-end mt-6 mt-md-7">
-                <p class="col-9 col-md-5 display-6 fw-bold">
+                <p class="col-9 col-md-5 fs-28 fs-md-48 fw-bold">
                     我們相信，最靈活的取用機制，才能最大化的幫助你業務的推動。
                 </p>
             </div>
